# LexGuard

./: .dockerignore  .gitignore  Dockerfile  README.md  dagger.go  dagger.json  data.dvc  go.mod  go.sum  pyproject.toml
.dvc/: config
data/: .gitignore  embedding_metrics.json  interim.dvc  raw.dvc  vectorstore.dvc
data/test/: baseline_eval_set.json  quick_eval_set.json
infrastructure/: check_env.py  run_hpc.sh
src/: config.py  main.py
src/agents/: auditor.py  graph.py  guardrail.py  prompts.py  researcher.py  state.py
src/evaluation/: evaluate.py
src/ingestion/: clean_data.py  embed.py  manual_debug_vectordb.py
src/utils/: EDA.py  __init__.py  helpers.py  visualization.py
tests/: conftest.py  vectordb.py
tests/agents/: test_graph.py  test_guardrail.py
tests/retrieval/: test_vectordb.py
